--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.login_BG {
+  background-size: cover;
+  background-color: rgba(255, 255, 255, 0.781);
+  position: fixed; top: 0; left: 0; right: 0; bottom: 0;
+}
