--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,10 @@ code {
   background-color: rgba(255, 255, 255, 0.781);
   position: fixed; top: 0; left: 0; right: 0; bottom: 0;
 }
+
+.postBtn {
+  position:fixed;
+  right:0;
+  bottom:0;
+  padding: 25px;
+}
