--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
-body {
+html, body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
+  min-width: 100%;
+  display: flex;
+  flex-flow: column;
 }
 
 code {
@@ -23,4 +27,27 @@ code {
   right:0;
   bottom:0;
   padding: 25px;
+}
+
+#root {
+  min-height: 100%;
+  min-width: 100%;
+}
+
+.fullsize_div {
+  display: flex;
+  min-height: 100%;
+  min-width: 100%;
+}
+
+#sidebar {
+  padding-top: 10px;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+#sidebar_2 {
+  padding-top: 40px;
+  min-width: 100%;
+  min-height: 100%;
 }
